--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <html>
     <head>
         <title>DM324 - Home Page</title>
-        <link rel="style sheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
     <body>
 
-       
-        <a href="index.html"  >Home</a>
-        <a href="list.html" >Students List</a>
-        <a href="NewStudent.html" >New Student</a>
-        <a href="Logout.html">Logout</a>
+        <ul>
+            <li><a href="index.html" class="active" >Home</a></li>
+            <li><a href="list.html" >Students List</a></li>
+            <li><a href="NewStudent.html" >New Student</a></li>
+            <li class="nav-right"><a href="Logout.html">Logout</a></li>
+        </ul>
 <hr/>
 <h3>Name: Ibrahim Ayman</h3>
 <h3>ID: 20193663</h3>
