--- a/NewStudent.html
+++ b/NewStudent.html
@@ -1,15 +1,18 @@
 <html>
     <head>
-        <title>DM324 - Home Page</title>
+        <title>DM324 -NewStudent</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
     <body>
 
 
-        <a href="index.html"  >Home</a>
-        <a href="list.html" >Students List</a>
-        <a href="NewStudent.html" >New Student</a>
-
+        <ul>
+            <li><a href="index.html" >Home</a></li>
+            <li><a href="list.html" >Students List</a></li>
+            <li><a href="NewStudent.html" class="active"  >New Student</a></li>
+            <li class="nav-right"><a href="Logout.html">Logout</a></li>
+        </ul>
             
 <hr/>
 <p>
