--- a/list.html
+++ b/list.html
@@ -1,20 +1,18 @@
 <html>
     <head>
         <title>DM324 - Students List</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
     <body>
 
 
-        <a href="index.html"  >Home</a>
-        <a href="list.html" >Students List</a>
-        <a href="NewStudent.html" >New Student</a>
-
-         
-    
-
-
-
+        <ul>
+            <li><a href="index.html" >Home</a></li>
+            <li><a href="list.html" class="active" >Students List</a></li>
+            <li><a href="NewStudent.html"   >New Student</a></li>
+            <li class="nav-right"><a href="Logout.html">Logout</a></li>
+        </ul>
 <hr/>
 
 <!--table-->
@@ -29,12 +27,7 @@
     </thead>
     <tbody>
         <tr>
-            <td>
-                <ul>
-                <li>20193663</li>
-                <li>Ibrahim Ayman</li>
-            </ul>
-        </td>
+            <td>20193663</td>
             <td>Ibrahim Ayman</td>
             <td>C.S</td>
             <td><img src="img/stud.png" alt="Student image" width="100" height="100"></td>
