--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
             <li><a href="index.html" class="active" >Home</a></li>
             <li><a href="list.html" >Students List</a></li>
             <li><a href="NewStudent.html" >New Student</a></li>
-            <li class="nav-right"><a href="Logout.html">Logout</a></li>
+            <li class="nav-right"><a href="login.html">Logout</a></li>
         </ul>
 <hr/>
+<h1 ><p class="titel">Home</p></h1>
 <h3>Name: Ibrahim Ayman</h3>
 <h3>ID: 20193663</h3>
 <h3>Email: 20193663@fue.edu.eg</h3>
