--- a/list.html
+++ b/list.html
@@ -11,10 +11,10 @@
             <li><a href="index.html" >Home</a></li>
             <li><a href="list.html" class="active" >Students List</a></li>
             <li><a href="NewStudent.html"   >New Student</a></li>
-            <li class="nav-right"><a href="Logout.html">Logout</a></li>
+            <li class="nav-right"><a href="login.html">Logout</a></li>
         </ul>
 <hr/>
-
+<h1 ><p class="titel">Students List</p></h1>
 <!--table-->
 <table border="2">
     <thead>
